--- a/color.css
+++ b/color.css
@@ -6,6 +6,8 @@ body{
     color: white;
     background-color: Black;
     font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-wrap:wrap;
 }
 
 .head{
